--- a/public/index.html
+++ b/public/index.html
@@ -5,27 +5,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
+        crossorigin="anonymous">
     <title>Document</title>
 </head>
 
-<body ng-app="app" ng-controller="todoController">
+<body ng-app="app" ng-controller="todoController" style="background-image: url(/images/bg.jpg)">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h1 ng-bind="titolo" class="text-center mt-5"></h1>
+            </div>
+        </div>
+        <div class="row my-5">
+            <div class="col-md-10">
+                <input type="text" ng-model="nuovotodo" class="form-control" placeholder="cosa vorresti fare?">
+            </div>
+            <div class="col-md-2">
+                <button type="button" class="btn btn-success" ng-click="inserttodo()" ng-disabled="!nuovotodo.length">Inserisci</button>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <p ng-repeat="todo in todos">
+                    <button class="btn btn-disabled" ng-hide="todo.fatto" ng-click="modifica($index)"><i class="fas fa-check"></i></button>
+                    <button class="btn btn-success" ng-show="todo.fatto" ng-click="modifica($index)"><i class="fas fa-check"></i></button>
+                    <button class="btn btn-danger" ng-click="cancella($index)"><i class="fas fa-trash"></i></button>
+                    <span ng-bind="todo.titolo" class="font-weight-bold text-capitalize" ng-style="todo.fatto && {'text-decoration': 'line-through'}"></span>
 
-    <input type="text" ng-model="nuovotodo">
-    <button type="button" ng-click="inserttodo()">Inserisci</button>
-
-    <p ng-repeat="todo in todos">
-        <button ng-click="modifica($index)">F</button>
-        <button ng-click="cancella($index)">X</button>
-        <span>{{todo.titolo}}</span>
-        <span ng-if="todo.fatto"> / fatto</span>
-    </p>
+                </p>
+            </div>
+        </div>
+    </div>
 
 </body>
 
 <!-- dipendenze esterne -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
+    crossorigin="anonymous"></script>
+<script src="/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="/angular/angular.min.js"></script>
 
-<!-- nostre esterne -->
+<!-- dipendenze interne -->
 <script src="/js/app.js"></script>
 <script src="/js/todo/todoController.js"></script>
 
