--- a/public/index.html
+++ b/public/index.html
@@ -18,11 +18,11 @@
                 <h1 ng-bind="titolo" class="text-center mt-5 text-light"></h1>
             </div>
         </div>
-        <div class="row my-5">
-            <div class="col-md-10">
+        <div class="row my-3">
+            <div class="col-10">
                 <input type="text" ng-model="nuovotodo" class="form-control" placeholder="cosa vorresti fare?">
             </div>
-            <div class="col-md-2">
+            <div class="col-2">
                 <button type="button" class="btn btn-success" ng-click="inserttodo()" ng-disabled="!nuovotodo.length">Inserisci</button>
             </div>
         </div>
