--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/datetimepicker/datetimepicker.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
         crossorigin="anonymous">
     <title>TODOLIST</title>
@@ -19,8 +20,11 @@
             </div>
         </div>
         <div class="row my-3">
-            <div class="col-10">
+            <div class="col-6">
                 <input type="text" ng-model="nuovotodo" class="form-control" placeholder="cosa vorresti fare?">
+            </div>
+            <div class="col-4">
+                <datetimepicker data-ng-model="data"></datetimepicker>
             </div>
             <div class="col-2">
                 <button type="button" class="btn btn-success" ng-click="inserttodo()" ng-disabled="!nuovotodo.length">Inserisci</button>
@@ -51,8 +55,11 @@
 <!-- dipendenze esterne -->
 
 <script src="/jquery/jquery.min.js"></script>
+<script src="/moment/moment.js"></script>
 <script src="/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="/angular/angular.min.js"></script>
+<script src="/datetimepicker/datetimepicker.js"></script>
+<script src="/datetimeinput/dateTimeInput.js"></script>
 
 <!-- dipendenze interne -->
 <script src="/js/app.js"></script>
